# html2md

./: .gitignore  CONTEXT.md  README.md  pyproject.toml
docs/: 问题.md  需求.md  需求文档.md
eg/: Metal_Gear_Solid_(video_game)_Wikipedia.md
sites/: fandom.yaml  wikipedia_en.yaml  wikipedia_jp.yaml  zeldawiki.yaml
src/html2md/: __init__.py  __main__.py  citations.py  cli.py  converter.py  downloader.py  errors.py  extractor.py  images.py  obsidian.py  pipeline.py  strategy.py  tables.py
tests/: test_citations.py  test_strategy.py  test_tables.py
